@@ -4,13 +4,13 @@ import com.nckh.genealogy.dto.request.family.AddChildRequest;
 import com.nckh.genealogy.dto.request.family.AddParentRequest;
 import com.nckh.genealogy.dto.request.family.AddSpouseRequest;
 import com.nckh.genealogy.dto.request.person.CreatePersonRequest;
+import com.nckh.genealogy.dto.response.family.CheckDeletableResponse;
 import com.nckh.genealogy.dto.response.family.FamilyResponse;
 import com.nckh.genealogy.dto.response.family.PersonFamilyResponse;
 import com.nckh.genealogy.dto.response.family.TreeGraphResponse;
 import com.nckh.genealogy.dto.response.person.PersonResponse;
 import com.nckh.genealogy.entity.*;
 import com.nckh.genealogy.enums.TreeMemberStatus;
-import com.nckh.genealogy.enums.UnionType;
 import com.nckh.genealogy.exception.AppException;
 import com.nckh.genealogy.exception.ErrorCode;
 import com.nckh.genealogy.mapper.PersonMapper;
@@ -44,13 +44,9 @@ public class FamilyServiceImpl implements FamilyService {
     @Transactional
     public FamilyResponse addSpouse(UUID treeId, UUID personId,
                                     UUID requesterId, AddSpouseRequest request) {
-        // Kiểm tra requester là member của tree
         requireTreeMember(requesterId, treeId);
-
-        // Kiểm tra person tồn tại và thuộc tree
         Person person = findPersonInTree(personId, treeId);
 
-        // Tạo person mới (vợ/chồng)
         Person spouse = createAndAddPersonToTree(
                 request.firstName(), request.lastName(), request.gender(),
                 request.dateOfBirth(), request.dateOfDeath(),
@@ -58,22 +54,39 @@ public class FamilyServiceImpl implements FamilyService {
                 treeId
         );
 
-        // Kiểm tra 2 người chưa có family với nhau
         if (familyRepository.existsByParents(personId, spouse.getId())) {
             throw new AppException(ErrorCode.FAMILY_ALREADY_EXISTS);
         }
 
-        // Tạo family
-        Family family = Family.builder()
-                .parent1(person)
-                .parent2(spouse)
-                .unionType(request.unionType())
-                .fromDate(request.fromDate())
-                .toDate(request.toDate())
-                .build();
-        familyRepository.save(family);
+        // Tìm các family chỉ có 1 cha/mẹ của person
+        List<Family> singleParentFamilies = familyRepository.findSingleParentFamilies(personId);
 
-        return buildFamilyResponse(family, Collections.emptyList());
+        Family family;
+
+        if (!singleParentFamilies.isEmpty()) {
+            // Điền spouse vào family đơn đã có → KHÔNG tạo thêm family mới
+            family = singleParentFamilies.get(0); // chỉ lấy family đầu tiên
+            if (family.getParent2() == null) {
+                family.setParent2(spouse);
+            } else {
+                family.setParent1(spouse);
+            }
+            if (request.fromDate() != null) family.setFromDate(request.fromDate());
+            if (request.toDate() != null) family.setToDate(request.toDate());
+            familyRepository.save(family);
+        } else {
+            // Không có family đơn nào → tạo family mới
+            family = Family.builder()
+                    .parent1(person)
+                    .parent2(spouse)
+                    .fromDate(request.fromDate())
+                    .toDate(request.toDate())
+                    .build();
+            familyRepository.save(family);
+        }
+
+        List<FamilyChild> children = familyChildRepository.findChildrenByFamilyId(family.getId());
+        return buildFamilyResponse(family, children);
     }
 
     // ==================== Add Parent ====================
@@ -117,7 +130,6 @@ public class FamilyServiceImpl implements FamilyService {
             family = Family.builder()
                     .parent1(parent)
                     .parent2(null)
-                    .unionType(request.unionType() != null ? request.unionType() : UnionType.UNKNOWN)
                     .fromDate(request.fromDate())
                     .toDate(request.toDate())
                     .build();
@@ -352,8 +364,8 @@ public class FamilyServiceImpl implements FamilyService {
     }
 
     private void requireTreeMember(UUID userId, UUID treeId) {
-        if (!treeMemberRepository.existsByUserIdAndTreeIdAndStatus(
-                userId, treeId, TreeMemberStatus.ACTIVE)) {
+        if (!treeMemberRepository.existsByUserIdAndTreeIdAndStatusIsActive(
+                userId, treeId)) {
             throw new AppException(ErrorCode.TREE_ACCESS_DENIED);
         }
     }
@@ -370,7 +382,6 @@ public class FamilyServiceImpl implements FamilyService {
                 family.getId(),
                 parent1Response,
                 parent2Response,
-                family.getUnionType(),
                 family.getFromDate(),
                 family.getToDate(),
                 childResponses
@@ -428,55 +439,79 @@ public class FamilyServiceImpl implements FamilyService {
         return false;
     }
 
-    /**
-     * Tính generation cho từng person bằng BFS từ root
-     * Root = thế hệ 1
-     */
     private Map<UUID, Integer> calculateGenerations(List<Family> families,
                                                     Map<UUID, List<UUID>> childrenMap,
                                                     List<Person> persons) {
         Map<UUID, Integer> generationMap = new HashMap<>();
 
-        // Build parent map: personId → parentIds
+        // parentMap: childId → Set<parentId>
         Map<UUID, Set<UUID>> parentMap = new HashMap<>();
         for (Family f : families) {
-            List<UUID> childIds = childrenMap.getOrDefault(f.getId(), Collections.emptyList());
-            for (UUID childId : childIds) {
+            for (UUID childId : childrenMap.getOrDefault(f.getId(), List.of())) {
                 parentMap.computeIfAbsent(childId, k -> new HashSet<>());
-                if (f.getParent1() != null) parentMap.get(childId).add(f.getParent1().getId());
+                parentMap.get(childId).add(f.getParent1().getId());
                 if (f.getParent2() != null) parentMap.get(childId).add(f.getParent2().getId());
             }
         }
 
-        // Tìm root (không có cha mẹ trong tree)
-        Set<UUID> allPersonIds = persons.stream().map(Person::getId).collect(Collectors.toSet());
-        for (UUID personId : allPersonIds) {
-            if (!parentMap.containsKey(personId) || parentMap.get(personId).isEmpty()) {
-                generationMap.put(personId, 1);
+        // spouseMap: personId → Set<spouseId>
+        Map<UUID, Set<UUID>> spouseMap = new HashMap<>();
+        for (Family f : families) {
+            if (f.getParent2() != null) {
+                spouseMap.computeIfAbsent(f.getParent1().getId(), k -> new HashSet<>())
+                        .add(f.getParent2().getId());
+                spouseMap.computeIfAbsent(f.getParent2().getId(), k -> new HashSet<>())
+                        .add(f.getParent1().getId());
             }
         }
 
-        // BFS từ roots
-        Queue<UUID> queue = new LinkedList<>(generationMap.keySet());
-        // Build children map: personId → childIds
+        Set<UUID> allPersonIds = persons.stream().map(Person::getId).collect(Collectors.toSet());
+        Set<UUID> hasParent = parentMap.keySet();
+
+        // personChildrenMap: parentId → childIds
         Map<UUID, List<UUID>> personChildrenMap = new HashMap<>();
         for (Family f : families) {
-            List<UUID> childIds = childrenMap.getOrDefault(f.getId(), Collections.emptyList());
-            if (f.getParent1() != null) {
-                personChildrenMap.computeIfAbsent(f.getParent1().getId(), k -> new ArrayList<>())
-                        .addAll(childIds);
-            }
+            List<UUID> kids = childrenMap.getOrDefault(f.getId(), List.of());
+            personChildrenMap.computeIfAbsent(f.getParent1().getId(), k -> new ArrayList<>()).addAll(kids);
             if (f.getParent2() != null) {
-                personChildrenMap.computeIfAbsent(f.getParent2().getId(), k -> new ArrayList<>())
-                        .addAll(childIds);
+                personChildrenMap.computeIfAbsent(f.getParent2().getId(), k -> new ArrayList<>()).addAll(kids);
             }
         }
 
+        // Chỉ seed generation 1 cho người THỰC SỰ là root:
+        // không có cha mẹ VÀ có cha mẹ trong cây (tức partner có cha mẹ → không phải in-law)
+        // Logic đơn giản hơn: ưu tiên người không có cha mẹ VÀ partner CÓ cha mẹ không được seed
+        // → chỉ seed người không có cha mẹ VÀ không có spouse nào có cha mẹ trong cây
+        for (UUID id : allPersonIds) {
+            if (hasParent.contains(id)) continue; // có cha mẹ → bỏ qua
+
+            // Kiểm tra xem có spouse nào có cha mẹ trong cây không
+            boolean spouseHasParent = spouseMap.getOrDefault(id, Set.of())
+                    .stream().anyMatch(hasParent::contains);
+
+            if (!spouseHasParent) {
+                // Không có cha mẹ, không có spouse nào có cha mẹ → true root, seed gen 1
+                generationMap.put(id, 1);
+            }
+            // Nếu spouse có cha mẹ → đây là in-law, sẽ nhận generation từ spouse qua BFS
+        }
+
+        // BFS từ seeds
+        Queue<UUID> queue = new LinkedList<>(generationMap.keySet());
         while (!queue.isEmpty()) {
             UUID current = queue.poll();
             int currentGen = generationMap.get(current);
-            List<UUID> children = personChildrenMap.getOrDefault(current, Collections.emptyList());
-            for (UUID childId : children) {
+
+            // Đồng bộ spouse cùng generation (override nếu chưa có)
+            for (UUID spouseId : spouseMap.getOrDefault(current, Set.of())) {
+                if (!generationMap.containsKey(spouseId)) {
+                    generationMap.put(spouseId, currentGen);
+                    queue.add(spouseId);
+                }
+            }
+
+            // Con = generation + 1
+            for (UUID childId : personChildrenMap.getOrDefault(current, List.of())) {
                 if (!generationMap.containsKey(childId)) {
                     generationMap.put(childId, currentGen + 1);
                     queue.add(childId);
@@ -484,19 +519,56 @@ public class FamilyServiceImpl implements FamilyService {
             }
         }
 
-        // Những người chưa có generation (isolated) → set = 1
+        // Isolated → generation 1
         allPersonIds.forEach(id -> generationMap.putIfAbsent(id, 1));
 
         return generationMap;
     }
 
-    private UUID findRootPerson(List<Person> persons, List<Family> families) {
-        Set<UUID> hasParent = new HashSet<>();
+    private UUID findRootPerson(List<Person> persons, List<Family> families,
+                                Map<UUID, List<UUID>> childrenMap) {
+        Set<UUID> hasParent = families.stream()
+                .flatMap(f -> childrenMap.getOrDefault(f.getId(), List.of()).stream())
+                .collect(Collectors.toSet());
+
+        // spouseMap: personId → Set<spouseId>
+        Map<UUID, Set<UUID>> spouseMap = new HashMap<>();
         for (Family f : families) {
-            familyChildRepository.findChildrenByFamilyId(f.getId())
-                    .forEach(fc -> hasParent.add(fc.getPerson().getId()));
+            if (f.getParent2() != null) {
+                spouseMap.computeIfAbsent(f.getParent1().getId(), k -> new HashSet<>())
+                        .add(f.getParent2().getId());
+                spouseMap.computeIfAbsent(f.getParent2().getId(), k -> new HashSet<>())
+                        .add(f.getParent1().getId());
+            }
         }
 
+        Set<UUID> isParent = new HashSet<>();
+        for (Family f : families) {
+            isParent.add(f.getParent1().getId());
+            if (f.getParent2() != null) isParent.add(f.getParent2().getId());
+        }
+
+        // Root lý tưởng: không có cha mẹ + là parent + không có spouse nào có cha mẹ
+        Optional<UUID> idealRoot = persons.stream()
+                .map(Person::getId)
+                .filter(id -> !hasParent.contains(id))
+                .filter(isParent::contains)
+                .filter(id -> spouseMap.getOrDefault(id, Set.of())
+                        .stream().noneMatch(hasParent::contains))
+                .findFirst();
+
+        if (idealRoot.isPresent()) return idealRoot.get();
+
+        // Fallback: không có cha mẹ + là parent (kể cả in-law)
+        Optional<UUID> fallback = persons.stream()
+                .map(Person::getId)
+                .filter(id -> !hasParent.contains(id))
+                .filter(isParent::contains)
+                .findFirst();
+
+        if (fallback.isPresent()) return fallback.get();
+
+        // Fallback cuối: không có cha mẹ
         return persons.stream()
                 .map(Person::getId)
                 .filter(id -> !hasParent.contains(id))
@@ -549,7 +621,6 @@ public class FamilyServiceImpl implements FamilyService {
                         f.getId(),
                         f.getParent1().getId(),
                         f.getParent2() != null ? f.getParent2().getId() : null,
-                        f.getUnionType(),
                         childrenMap.getOrDefault(f.getId(), Collections.emptyList())
                 ))
                 .toList();
@@ -558,12 +629,255 @@ public class FamilyServiceImpl implements FamilyService {
                 .mapToInt(Integer::intValue).max().orElse(1);
 
         // Root = person không có cha mẹ trong tree và có đời con
-        UUID rootPersonId = findRootPerson(persons, families);
+        UUID rootPersonId = findRootPerson(persons, families, childrenMap);
 
         return new TreeGraphResponse(
                 personNodes,
                 familyNodes,
                 new TreeGraphResponse.Meta(persons.size(), totalGenerations, rootPersonId)
         );
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public CheckDeletableResponse checkDeletable(UUID treeId, UUID personId, UUID requesterId) {
+        requireTreeMember(requesterId, treeId);
+
+        List<Person> allPersons = treePersonRepository
+                .findByTreeIdAndDeletedAtIsNull(treeId)
+                .stream().map(TreePerson::getPerson).toList();
+
+        List<Family> allFamilies = familyRepository.findAllByTreeId(treeId);
+
+        // childrenMap: familyId → List<childId>
+        Map<UUID, List<UUID>> childrenMap = new HashMap<>();
+        for (Family f : allFamilies) {
+            childrenMap.put(f.getId(),
+                    familyChildRepository.findChildrenByFamilyId(f.getId())
+                            .stream().map(fc -> fc.getPerson().getId()).toList());
+        }
+
+        // childParentsMap: childId → Set<parentId>
+        Map<UUID, Set<UUID>> childParentsMap = new HashMap<>();
+        for (Family f : allFamilies) {
+            for (UUID childId : childrenMap.getOrDefault(f.getId(), List.of())) {
+                childParentsMap.computeIfAbsent(childId, k -> new HashSet<>());
+                childParentsMap.get(childId).add(f.getParent1().getId());
+                if (f.getParent2() != null) {
+                    childParentsMap.get(childId).add(f.getParent2().getId());
+                }
+            }
+        }
+
+        // Families bị remove khi xóa person (person là parent)
+        Set<UUID> removedFamilyIds = allFamilies.stream()
+                .filter(f -> f.getParent1().getId().equals(personId)
+                        || (f.getParent2() != null && f.getParent2().getId().equals(personId)))
+                .map(Family::getId)
+                .collect(Collectors.toSet());
+
+        // Tất cả con của person bị xóa
+        Set<UUID> childrenOfDeletedPerson = removedFamilyIds.stream()
+                .flatMap(fid -> childrenMap.getOrDefault(fid, List.of()).stream())
+                .collect(Collectors.toSet());
+
+        // Remaining
+        Set<UUID> remainingIds = allPersons.stream()
+                .map(Person::getId)
+                .filter(id -> !id.equals(personId))
+                .collect(Collectors.toSet());
+
+        List<Family> remainingFamilies = allFamilies.stream()
+                .filter(f -> !removedFamilyIds.contains(f.getId()))
+                .toList();
+
+        // connectedToAnyFamily: ai còn trong ít nhất 1 family còn lại
+        Set<UUID> connectedToAnyFamily = new HashSet<>();
+        for (Family f : remainingFamilies) {
+            connectedToAnyFamily.add(f.getParent1().getId());
+            if (f.getParent2() != null) connectedToAnyFamily.add(f.getParent2().getId());
+            childrenMap.getOrDefault(f.getId(), List.of()).forEach(connectedToAnyFamily::add);
+        }
+
+        // Các family bị remove nhưng CÓ CON sẽ được GIỮ LẠI (chỉ null parent)
+        // → spouse + con trong family đó vẫn connected
+        for (UUID fid : removedFamilyIds) {
+            boolean hasKids = !childrenMap.getOrDefault(fid, List.of()).isEmpty();
+            if (!hasKids) continue;
+
+            Family f = allFamilies.stream()
+                    .filter(fam -> fam.getId().equals(fid))
+                    .findFirst().orElse(null);
+            if (f == null) continue;
+
+            UUID spouseId = f.getParent1().getId().equals(personId)
+                    ? (f.getParent2() != null ? f.getParent2().getId() : null)
+                    : f.getParent1().getId();
+            if (spouseId != null) connectedToAnyFamily.add(spouseId);
+
+            childrenMap.getOrDefault(fid, List.of()).forEach(connectedToAnyFamily::add);
+        }
+
+        // Kiểm tra từng con: còn parent nào khác không?
+        Set<UUID> willBeOrphaned = new HashSet<>();
+        for (UUID childId : childrenOfDeletedPerson) {
+            Set<UUID> remainingParents = childParentsMap.getOrDefault(childId, Set.of())
+                    .stream()
+                    .filter(pid -> !pid.equals(personId))
+                    .collect(Collectors.toSet());
+            if (remainingParents.isEmpty()) {
+                willBeOrphaned.add(childId);
+            }
+        }
+
+        // Kiểm tra spouse: còn liên kết không?
+        Set<UUID> spousesOfDeletedPerson = new HashSet<>();
+        for (UUID fid : removedFamilyIds) {
+            Family f = allFamilies.stream()
+                    .filter(fam -> fam.getId().equals(fid))
+                    .findFirst().orElse(null);
+            if (f == null) continue;
+
+            UUID spouseId = f.getParent1().getId().equals(personId)
+                    ? (f.getParent2() != null ? f.getParent2().getId() : null)
+                    : f.getParent1().getId();
+            if (spouseId != null) spousesOfDeletedPerson.add(spouseId);
+        }
+
+        for (UUID spouseId : spousesOfDeletedPerson) {
+            if (!connectedToAnyFamily.contains(spouseId)) {
+                willBeOrphaned.add(spouseId);
+            }
+        }
+
+        // Build parentChildrenMap sau khi xóa (dùng remainingFamilies + kept families)
+        Map<UUID, List<UUID>> parentChildrenMap = new HashMap<>();
+
+        // Từ remainingFamilies
+        for (Family f : remainingFamilies) {
+            List<UUID> kids = childrenMap.getOrDefault(f.getId(), List.of());
+            if (kids.isEmpty()) continue;
+            parentChildrenMap.computeIfAbsent(f.getParent1().getId(), k -> new ArrayList<>()).addAll(kids);
+            if (f.getParent2() != null) {
+                parentChildrenMap.computeIfAbsent(f.getParent2().getId(), k -> new ArrayList<>()).addAll(kids);
+            }
+        }
+
+        // Từ removed families có con (được giữ lại với spouse còn lại)
+        for (UUID fid : removedFamilyIds) {
+            List<UUID> kids = childrenMap.getOrDefault(fid, List.of());
+            if (kids.isEmpty()) continue;
+
+            Family f = allFamilies.stream()
+                    .filter(fam -> fam.getId().equals(fid))
+                    .findFirst().orElse(null);
+            if (f == null) continue;
+
+            UUID spouseId = f.getParent1().getId().equals(personId)
+                    ? (f.getParent2() != null ? f.getParent2().getId() : null)
+                    : f.getParent1().getId();
+            if (spouseId != null) {
+                parentChildrenMap.computeIfAbsent(spouseId, k -> new ArrayList<>()).addAll(kids);
+            }
+        }
+
+        // hasParentAfterDelete: ai có cha mẹ sau khi xóa
+        Set<UUID> hasParentAfterDelete = new HashSet<>();
+        for (Family f : remainingFamilies) {
+            childrenMap.getOrDefault(f.getId(), List.of()).forEach(hasParentAfterDelete::add);
+        }
+        // Con trong removed families có con vẫn có parent (spouse còn lại)
+        for (UUID fid : removedFamilyIds) {
+            List<UUID> kids = childrenMap.getOrDefault(fid, List.of());
+            if (!kids.isEmpty()) kids.forEach(hasParentAfterDelete::add);
+        }
+
+        // BFS từ valid roots
+        Set<UUID> roots = remainingIds.stream()
+                .filter(id -> !hasParentAfterDelete.contains(id))
+                .filter(connectedToAnyFamily::contains)
+                .filter(id -> !willBeOrphaned.contains(id))
+                .collect(Collectors.toSet());
+
+        Set<UUID> reachable = new HashSet<>(roots);
+        Queue<UUID> queue = new LinkedList<>(roots);
+        while (!queue.isEmpty()) {
+            UUID current = queue.poll();
+            for (UUID child : parentChildrenMap.getOrDefault(current, List.of())) {
+                if (reachable.add(child)) queue.add(child);
+            }
+        }
+
+        // finalOrphans = willBeOrphaned + không reachable + có liên kết family
+        Set<UUID> finalOrphans = new HashSet<>(willBeOrphaned);
+        remainingIds.stream()
+                .filter(id -> !reachable.contains(id))
+                .filter(connectedToAnyFamily::contains)
+                .forEach(finalOrphans::add);
+
+        if (finalOrphans.isEmpty()) {
+            return new CheckDeletableResponse(true, List.of(), List.of(), null);
+        }
+
+        List<UUID> orphanedIds = List.copyOf(finalOrphans);
+        List<String> orphanedNames = orphanedIds.stream()
+                .map(id -> personRepository.findById(id)
+                        .map(p -> p.getLastName() + " " + p.getFirstName())
+                        .orElse("Không xác định"))
+                .toList();
+
+        String message = "Xóa người này sẽ làm " + orphanedIds.size()
+                + " người mất liên kết: " + String.join(", ", orphanedNames);
+
+        return new CheckDeletableResponse(false, orphanedIds, orphanedNames, message);
+    }
+
+    @Override
+    @Transactional
+    public void hardDeletePerson(UUID treeId, UUID personId, UUID requesterId) {
+        requireTreeMember(requesterId, treeId);
+        findPersonInTree(personId, treeId);
+
+        CheckDeletableResponse check = checkDeletable(treeId, personId, requesterId);
+        if (!check.deletable()) {
+            throw new AppException(ErrorCode.INVALID_REQUEST, check.message());
+        }
+
+        // 1. Xóa khỏi family_children (person là CON)
+        familyChildRepository.deleteByPersonId(personId);
+
+        // 2. Xử lý các family mà person là PARENT
+        List<Family> familiesAsParent = familyRepository.findFamiliesAsParent(personId);
+        for (Family f : familiesAsParent) {
+            UUID otherParentId = f.getParent1().getId().equals(personId)
+                    ? (f.getParent2() != null ? f.getParent2().getId() : null)
+                    : f.getParent1().getId();
+
+            boolean hasChildren = !familyChildRepository
+                    .findChildrenByFamilyId(f.getId()).isEmpty();
+
+            if (otherParentId != null && hasChildren) {
+                // Còn parent kia + còn con → giữ family, chỉ null parent bị xóa
+                if (f.getParent1().getId().equals(personId)) {
+                    // parent1 bị xóa → swap: đưa parent2 lên parent1, null parent2
+                    f.setParent1(f.getParent2());
+                    f.setParent2(null);
+                } else {
+                    // parent2 bị xóa → chỉ null parent2
+                    f.setParent2(null);
+                }
+                familyRepository.save(f);
+            } else {
+                // Không có parent kia hoặc không có con → xóa cả family
+                familyChildRepository.deleteByFamilyId(f.getId());
+                familyRepository.delete(f);
+            }
+        }
+
+        // 3. Xóa khỏi tree_persons
+        treePersonRepository.deleteByPersonId(personId);
+
+        // 4. Hard delete person
+        personRepository.deleteById(personId);
     }
 }
